# rossumo

./: .travis.yml  CMakeLists.txt  README.md  package.xml
config/: arpose.rviz  arpose_hp.rviz  camera2world_param.txt  rviz_image_localizer.rviz
data/: camcalib.yaml  hp_hd_3310_calib.yaml  hp_pavilion_dv6-1050ef_webcam_calib.yaml  sumo_calibrate.m  sumo_camera_parameters.yaml  sumo_speed_calibrate.ods
doc/: ARCONTROLLER_Feature.h  Keys.h
include/rossumo/: controller_key2string.h  device_state2string.h  light_sumo.h  rossumo.h
launch/: ar_tracker.launch  ar_tracker_webcam.launch  blob_tracker.launch  camview.launch  double_sumo_joy.launch  image2speed_calibrator.launch  joy_teleop.launch  joy_teleop_norm.launch  keyboard_teleop.launch  rossumo.launch  visual_odometry.launch  viz.launch  wiimote_node.launch  wiimote_teleop.launch  xwiimote_teleop.launch
scripts/: sumo2router_client.bash  sumo_teleop_joy.py
src/: CMakeLists.txt  armarker2pose.cpp  blob_tracker.cpp  image2camera_tf.cpp  image_localizer.cpp  light_sumo_test.cpp  rossumo.cpp  speed_calibrator.cpp  spider_prompt.cpp  sumo_prompt.cpp  sumo_teleop_joy.cpp
