<?xml version="1.0"?>
<!-- doc: http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>rossumo</name>
  <version>0.0.0</version>
  <description>
      The interface between "libsumo" and ROS.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>GPLv2</license>
  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>pulse</depend>
  <export>
        <rosdoc config="rosdoc.yaml" /> <!-- http://wiki.ros.org/rosdoc_lite -->
      <cpp cflags="-I${prefix} -I${prefix}/build"
         lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib"/>
  </export>
</package>
